Tue May  1 11:42:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_stat.h:
          Fixed compile error

Tue May  1 10:25:37 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_stat.h:
          Compile fix for WinCE 7

Tue May  1 07:48:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Mem_Map.cpp:
          Layout changes

        * ace/config-win32-msvc-9.h:
          Removed wince comment

Sun Apr 29 19:17:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
          More improvements to this script

Sun Apr 29 19:01:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
          Support flat layout

Fri Apr 27 18:43:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
          Corrected output messages

Fri Apr 27 18:40:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_time.h:
        * ace/config-win32-msvc-9.h:
          First fixes for WinCE 7

Wed Apr 25 07:02:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Get_Opt.cpp:
          Reverted Wed Apr 18 08:51:31 UTC 2012  Martin Corino  <mcorino@remedy.nl>

Tue Apr 24 01:18:27 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/String_Base.h (template): Zapped the 'explicit' keywords
          introduced by the change in

          Tue Apr 17 19:09:30 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

          since it was breaking too much code.

Wed Apr 18 08:51:31 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/String_Base.h:
          Reverted 'explicit' declaration for single arg constructor for
          const ACE_TCHAR* as implicit conversion of this arg type to
          ACE string class is the expected behaviour (similar to the
          STL std::string).

        * ace/Get_Opt.cpp: